--- a/rainbow.html
+++ b/rainbow.html
@@ -5,7 +5,8 @@
         <title>rainbow</title>
         <style type="text/css">
             html,body,div,ul,li,span,a{margin:0;padding:0;}
-            #holder{width:400px;height:400px;border-radius: 50%;overflow: hidden; margin:100px 0 0 200px;}
+            #holder{width:400px;height:400px;border-radius: 50%;overflow: hidden; margin:30px 0 0 50px;position:relative;-webkit-transition: all .3s ease;-moz-transition: all .3s ease;transition: all .3s ease;}
+
             .container{list-style: none; width:400px;height:400px; position: relative;}
             .container li{list-style: none;  position: absolute; left:50%; top: 50%; width: 200px; height: 200px;background: #ccc;
                 -webkit-transform-origin: 100% 100%;
@@ -37,10 +38,12 @@
             .container li:nth-child(7) a{background:rgb(124,63,228);}
 
             .container:after{content:" ";display:block; width:200px;height:200px;position: absolute;background: #fff;border-radius: 50%;left:50%;top:50%;margin:-100px;}
+            /*#holder button{width:100px;height:100px;position: absolute;background: #000;border-radius: 50%;left:50%;top:50%;margin:-50px;z-index:10;}*/
         </style>
     </head>
     <body>
         <div id="holder">
+            <!-- <button>-</button> -->
             <ul class="container">
                 <li><a href="#"><span>MONDAY</span></a></li>
                 <li><a href="#"><span>SERIOUSLY</span></a></li>
